--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-825.6KB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-944.9KB/s(Youtube:不良林), server: 38.114.114.19, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-6.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-735.2KB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 38.68.134.85, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-567.5KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-420.8KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇨🇳 中国-534.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.19MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-807.2KB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-372.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-735.4KB/s(Youtube:不良林), server: 38.114.114.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-534.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-807.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-372.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-735.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-534.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-807.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-372.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-735.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-534.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-807.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-372.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-735.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-534.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-807.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-372.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-735.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-534.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-807.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-372.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-735.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-534.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-807.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-372.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-735.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-534.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-807.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-372.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-735.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
